--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
             document.getElementById("startBtn").style.display = "inline-block";
             document.querySelector(".input-group").style.display = "block";
             document.getElementById("continueBtn").style.display = "none";
+            document.getElementById("submitBtn").style.display = "inline-block";
             document.getElementById("score").innerHTML = "";
             document.getElementById("questions").innerHTML = "";
             selectedQuestions = [];
