--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <ul id="historyList"></ul>
     </div>
 </div>
-<h5>By CYUT IM Jerry Hsu, </h5>
+<h5>By CYUT IM Jerry Hsu v2.1.1</h5>
 <script>
 
     const chapters = [
